[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/themes/window_background2.tres" type="Texture" id=1]
[ext_resource path="res://scenes/ui/InGameMenu/InGameMenu.gd" type="Script" id=2]

[node name="InGameMenu" type="Control"]
margin_right = 349.0
margin_bottom = 39.0
rect_min_size = Vector2( 0, 50 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 50 )
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 339.0
margin_bottom = 40.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryButton" type="Button" parent="MarginContainer/HBoxContainer"]
margin_right = 73.0
margin_bottom = 40.0
text = "Inventory"

[node name="HelpButton" type="Button" parent="MarginContainer/HBoxContainer"]
margin_left = 83.0
margin_right = 125.0
margin_bottom = 40.0
text = "Help"

[connection signal="pressed" from="MarginContainer/HBoxContainer/InventoryButton" to="." method="_on_InventoryButton_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/HelpButton" to="." method="_on_HelpButton_pressed"]
